# api_diplom_

./: db.sqlite3  pyproject.toml  requirements.txt
demo/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
demo/migrations/: 0001_initial.py  0002_cart.py  0003_iteminorder_alter_cart_count_order_iteminorder_order_and_more.py  0004_alter_iteminorder_product_alter_product_count.py  0005_remove_iteminorder_order_remove_iteminorder_product_and_more.py  0006_app_task.py  0007_task_user.py  0008_task_is_completed.py
demo/static/css/: bootstrap.min.css  main.css
demo/static/js/: app.js  script.js
prod/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
templates/demo/: about.html  cart.html  catalog.html  checkout.html  contact.html  detail.html  orders.html  product.html  tasks.html
templates/registration/: login.html  register.html
